[REGISTRATION] Prepare user domain for registration
