# drinkit/drinkit-api-contract/contract/api-definition.yaml
@@ -11,6 +11,8 @@ tags:
     description: Operations on cellars
   - name: auth
     description: Authentication operations
+  - name: registration
+    description: User Registration operations
 
 paths:
   /api/cellars:
@@ -90,3 +92,67 @@ paths:
           description: Unauthorized
         '200':
           description: User signed in
+
+  /api/registration/new:
+    post:
+      operationId: createNewUser
+      tags:
+        - registration
+      summary: Create a new user
+      description: | 
+        Create a new user with email and password (this user is disable until email confirmation)
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'registrationParameters.yaml#/components/schemas/CreateUserRequest'
+      responses:
+        '400':
+          description: Bad request
+        '201':
+          description: User created
+
+  /api/registration/email/confirmation:
+    post:
+      operationId: confirmUserEmail
+      tags:
+        - registration
+      summary: Confirm User Email
+      description: |
+        Confirm the created user email using the validation code sent by the system
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'registrationParameters.yaml#/components/schemas/ConfirmEmailRequest'
+      responses:
+        '401':
+          description: Unauthorized
+        '400':
+          description: Bad request
+        '200':
+          description: Email confirmed
+
+  /api/registration/user/information:
+    post:
+      operationId: completeUserInformation
+      tags:
+        - registration
+      summary: Complete user information
+      description: |
+        Complete required user information like firstname/lastname/...
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'registrationParameters.yaml#/components/schemas/CompleteUserInformationRequest'
+      responses:
+        '401':
+          description: Unauthorized
+        '400':
+          description: Bad request
+        '200':
+          description: User information completed
